--- a/src/assets/styles/cmps/DetailsReviews.scss
+++ b/src/assets/styles/cmps/DetailsReviews.scss
@@ -1,36 +1,63 @@
 .reviews-container {
-  border: 1px solid black;
+  grid-column-start: span 2;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 40px;
+  // border: 1px solid black;
   padding: 0.5em;
-}
 
-.reviews-rate {
-  gap: 0.5em;
-  align-items: center;
-  a {
-    color: black;
-  }
-  span {
-    font-size: 1.13em;
-  }
-}
-
-.rating {
-  grid-template-columns: repeat(4, 1fr);
-  align-items: center;
-
-  p {
-    margin: 0;
-  }
-  progress {
-    height: 4px;
-    border-radius: 40px;
-  }
-  progress[value]::-webkit-progress-bar {
-    background-color: #eee;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+  .review {
+    // border: 1px solid palegreen;
+    flex-direction: column;
+    gap: 0.5em;
   }
 
-  progress[value]::-webkit-progress-value {
-    background-color: black;
+  .reviews-header {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2em;
+    margin-block-start: 1.6em;
+    .reviews-rate {
+      gap: 0.5em;
+      align-items: center;
+      a {
+        color: black;
+      }
+      span {
+        font-size: 1.13em;
+      }
+    }
+
+    .rating {
+      grid-template-columns: repeat(4, 1fr);
+      align-items: center;
+      gap: 1em;
+
+      p {
+        margin: 0;
+      }
+      progress {
+        height: 4px;
+        border-radius: 40px;
+      }
+      progress[value]::-webkit-progress-bar {
+        background-color: #eee;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+      }
+
+      progress[value]::-webkit-progress-value {
+        background-color: black;
+      }
+    }
+  }
+
+  .mini-user-details {
+    gap: 0.5em;
+    img {
+      width: 60px;
+      height: 60px;
+      border-radius: 50px;
+      object-fit: cover;
+    }
   }
 }
