--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -9,12 +9,20 @@ $clr7: #000000;
 $clr8: #222222;
 $clr9: #717171;
 // Breakpoints main (home)
-$mobile-breakpoint: 502px;
-$mobile-big-breakpoint: 696px;
-$tablet-breakpoint: 902px;
-$narrow-breakpoint: 1048px;
+// $mobile-breakpoint: 502px;
+// $mobile-big-breakpoint: 696px;
+// $tablet-breakpoint: 902px;
+// $narrow-breakpoint: 1048px;
+// $normal-breakpoint: 1360px;
+// $wide-breakpoint: 1720px;
+
+$mobile-breakpoint: 460px;
+$mobile-big-breakpoint: 500px;
+$tablet-breakpoint: 960px;
+$narrow-breakpoint: 1200px;
 $normal-breakpoint: 1360px;
 $wide-breakpoint: 1720px;
+
 // Breakpoints details (stay)
 $mobile-details-breakpoint: 502px;
 $mobile-details-big-breakpoint: 696px;
