--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -82,6 +82,10 @@
 
 .cards-layout {
   grid-template-columns: repeat(4, 1fr);
+
+  // .stay-card {
+  //   width: 280px;
+  // }
 }
 
 // @media screen and (max-width: $mobile-breakpoint) {
