--- a/src/assets/styles/cmps/StayPreview.scss
+++ b/src/assets/styles/cmps/StayPreview.scss
@@ -3,6 +3,12 @@
     color: $clr9;
     font-size: 15px;
 
+    .el-carousel__button {
+        width: 4px;
+        height: 4px;
+        border-radius: 50%;
+    }
+
     .el-carousel__item h3 {
         color: #475669;
         opacity: 0.75;
@@ -22,18 +28,21 @@
     .el-carousel__item {
         img {
             object-fit: cover;
+            width: 100%;
+            height: 100%;
         }
 
         border-radius: 10px;
     }
 
     .stay-name {
-        // font-family: Airbnb_Cereal-Medium;
+        font-family: Airbnb_Cereal-Medium;
         color: $clr8;
         justify-content: space-between;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
+        margin: 0;
 
         .rate {
             gap: 0.4em;
