--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -5,6 +5,9 @@
 }
 
 .main-header {
+  // &.is-in-details-page{
+
+  // }
   display: flex;
   height: 80px;
   align-items: center;
@@ -52,7 +55,7 @@
       font-weight: bold;
       font-family: CircularAir-Light;
       cursor: pointer;
-      font-size: 14.2px;
+      font-size: 14.1px;
     }
 
     .guests {
@@ -65,6 +68,7 @@
       border-radius: 50%;
       width: 32px;
       height: 32px;
+      margin-inline-start: 2%;
       cursor: pointer;
       svg{
         margin: -5px;
@@ -90,6 +94,7 @@
     padding: 7px 15px;
     font-weight: bold;
     font-family: CircularAir-Light;
+    margin-inline-start: 10%;
   }
 
   .airgpt-your-home-link:hover {
