--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -1,73 +1,37 @@
 /* Breakpoint mixins */
-
-// @mixin for-mobile-layout {
-//     @media (max-width: calc($mobile-breakpoint + 48px)) {
-//         @content;
-//     }
-// }
-// @mixin for-mobile-big-layout {
-//     @media (max-width: calc($mobile-big-breakpoint + 48px)) {
-//         @content;
-//     }
-// }
-
-// @mixin for-tablet-layout {
-//     @media (max-width: calc($tablet-breakpoint + 48px)) {
-//         @content;
-//     }
-// }
-
-// @mixin for-narrow-layout {
-//     @media (max-width: calc($narrow-breakpoint + 80px)) {
-//         @content;
-//     }
-// }
-
-// @mixin for-normal-layout {
-//     @media (max-width: calc($wide-breakpoint + 80px)) {
-//         @content;
-//     }
-// }
+// home
 @mixin for-mobile-layout {
-  @media (max-width: calc($mobile-breakpoint + 48px)) {
-    @content;
-  }
+    @media (max-width: calc($mobile-breakpoint + 48px)) {
+        @content;
+    }
 }
 @mixin for-mobile-big-layout {
-  @media (min-width: calc($mobile-big-breakpoint + 48px)) {
-    @content;
-  }
+    @media (min-width: calc($mobile-big-breakpoint + 48px)) {
+        @content;
+    }
 }
-
 @mixin for-tablet-layout {
-  @media (min-width: calc($tablet-breakpoint + 48px)) {
-    @content;
-  }
+    @media (min-width: calc($tablet-breakpoint + 48px)) {
+        @content;
+    }
 }
-
 @mixin for-narrow-layout {
-  @media (min-width: calc($narrow-breakpoint + 80px)) {
-    @content;
-  }
+    @media (min-width: calc($narrow-breakpoint + 80px)) {
+        @content;
+    }
 }
-
 @mixin for-normal-layout {
-  @media (min-width: calc($normal-breakpoint + 80px)) {
-    @content;
-  }
+    @media (min-width: calc($normal-breakpoint + 80px)) {
+        @content;
+    }
 }
-
 @mixin for-wide-layout {
-  @media (min-width: calc($wide-breakpoint + 80px)) {
-    @content;
-  }
+    @media (min-width: calc($wide-breakpoint + 80px)) {
+        @content;
+    }
 }
 
-// @mixin for-wide-layout {
-//     @media (max-width: calc($wide-breakpoint + 80px)) {
-//         @content;
-//     }
-// }
+
 // details
 
 @mixin for-details-mobile-layout {
@@ -104,6 +68,45 @@
     @content;
   }
 }
+
+
+// cards
+@mixin for-cards-mobile-layout {
+    @media (max-width: calc($mobile-breakpoint + 48px)) {
+        @content;
+    }
+}
+@mixin for-cards-big-layout {
+    @media (min-width: calc($mobile-big-breakpoint + 48px)) {
+        @content;
+    }
+}
+@mixin for-cards-tablet-layout {
+    @media (min-width: calc($tablet-breakpoint + 48px)) {
+        @content;
+    }
+}
+@mixin for-cards-narrow-layout {
+    @media (min-width: calc($narrow-breakpoint + 80px)) {
+        @content;
+    }
+}
+@mixin for-cards-normal-layout {
+    @media (min-width: calc($normal-breakpoint + 80px)) {
+        @content;
+    }
+}
+@mixin for-cards-wide-layout {
+    @media (min-width: calc($wide-breakpoint + 80px)) {
+        @content;
+    }
+}
+
+
+
+
+
+
 
 /* Media  Mixins */
 @mixin aspect-ratio($width, $height) {
