--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -8,14 +8,8 @@ $clr6: #dff0ea;
 $clr7: #000000;
 $clr8: #222222;
 $clr9: #717171;
-// Breakpoints main (home)
-// $mobile-breakpoint: 502px;
-// $mobile-big-breakpoint: 696px;
-// $tablet-breakpoint: 902px;
-// $narrow-breakpoint: 1048px;
-// $normal-breakpoint: 1360px;
-// $wide-breakpoint: 1720px;
 
+// main layout
 $mobile-breakpoint: 460px;
 $mobile-big-breakpoint: 500px;
 $tablet-breakpoint: 960px;
