--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -164,8 +164,8 @@
     position: fixed;
     top: 155px;
     right: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(113, 113, 113, 0.408);
     z-index: 3;
 }
