--- a/src/assets/styles/cmps/CarouselFilterPreview.scss
+++ b/src/assets/styles/cmps/CarouselFilterPreview.scss
@@ -1,14 +1,21 @@
 .labels {
     font-size: small;
     margin-block-start: 1em;
-    opacity: 0.6;
 
     .label {
+        opacity: 0.6;
         margin-block-start: 1em;
         align-items: center;
         min-width: 70px;
         gap: 10px;
         cursor: pointer;
+        color: $clr9;
+
+        &.isActive {
+            opacity: 1;
+            color: $clr7;
+            box-shadow: inset 0 -2px #000 !important
+        }
     }
 
     img {
