--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,7 +17,7 @@
 @import 'cmps/ReviewList';
 @import 'cmps/StayList';
 @import 'cmps/StayPreview';
-@import 'cmps/LabelsPreview.scss';
+@import 'cmps/CarouselFilterPreview.scss';
 @import 'cmps/UserNav';
 @import 'cmps/InnerHeader';
 
