--- a/src/assets/styles/cmps/DetailsReviews.scss
+++ b/src/assets/styles/cmps/DetailsReviews.scss
@@ -1,10 +1,9 @@
 .reviews-container {
   grid-column-start: span 2;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  // grid-template-columns: repeat(2, 1fr);
   row-gap: 40px;
-  // border: 1px solid black;
-  padding: 0.5em;
+  padding: 0;
 
   .review {
     // border: 1px solid palegreen;
@@ -16,7 +15,8 @@
     display: flex;
     flex-direction: column;
     gap: 1.2em;
-    margin-block-start: 1.6em;
+    margin-block-start: 2.2em;
+    padding: 0;
     .reviews-rate {
       gap: 0.5em;
       align-items: center;
@@ -50,12 +50,16 @@
       }
     }
   }
+}
 
+.guest-reviews-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   .mini-user-details {
     gap: 0.5em;
     img {
-      width: 60px;
-      height: 60px;
+      width: 50px;
+      height: 50px;
       border-radius: 50px;
       object-fit: cover;
     }
