--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,3 +25,6 @@
 @import 'cmps/StayDetails';
 @import 'cmps/DetailsOrderBox';
 @import 'cmps/DetailsReviews';
+
+// Reservation Page
+@import 'cmps/StayReservation';
