--- a/src/assets/styles/cmps/InnerHeader.scss
+++ b/src/assets/styles/cmps/InnerHeader.scss
@@ -256,75 +256,30 @@
   border-radius: 32px;
   z-index: 8;
   grid-template-columns: repeat(2, 1fr);
+  grid-gap: 16px;
   background-color: #fff;
   align-items: center;
   justify-items: left;
 }
-// .calender-container {
-//   position: absolute;
-//   display: grid;
-//   top: 81px;
-//   width: 848px;
-//   right: calc(50% - 420px);
-//   height: 450px;
-//   padding: 16px 32px;
-//   padding-bottom: 24px;
-//   border-radius: 32px;
-//   z-index: 8;
-//   grid-template-columns: repeat(2, 1fr);
-//   background-color: #fff;
-//   align-items: center;
-//   justify-items: left;
-//   .el-calendar{
-//     &.calendar-inner-section-1{
-//       width: 100%;
-//       grid-column: 1;
-//       grid-row: 2;
-//       margin-inline-start: 40px;
-//     }
-//   } 
-//   .el-calendar{
-//     &.calendar-inner-section-2{
-//       width: 90%;
-//       grid-column: 2;
-//       grid-row: 2;
-//       margin-inline-start: 40px;
-//     }
-//   } 
-//   .el-calendar__header{
-//     width: 300px;
-//   }
-//   .el-calendar__body {
-//     height: 100%;
-//     width: 300px;
-//     margin: 0;
-//   }
-//   .el-calendar {
-//     --el-calendar-cell-width: 50px;
-//   }
-//   .current {
-//     border-radius: 50%;
-//   }
-//   .prev {
-//     border-radius: 50%;
-//   }
-//   .el-calendar-table {
-//     height: 150px;
-//     width: 300px;
-//   }
-//   .el-calendar-table .el-calendar-day:hover {
-//     cursor: pointer;
-//     background-color: var(--el-calendar-selected-bg-color);
-//     border-radius: 50%;
-//   }
-//   .el-calendar-table .el-calendar-day {
-//     height: 40px;
-//   }
-//   .el-calendar-day {
-//     padding: 0;
-//   }
+
+// .calendar {
+//   flex: 1;
+//   max-width: calc(50% - 8px);
+//   margin-right: 16px;
+//   margin-bottom: 16px;
 // }
 
+// .calendar:last-child {
+//   margin-right: 0;
+// }
+// .calendar{
+//   max-width: 100%;
+// }
+// .vc-pane-layout {
+//   background-color: red;
+//   display: flex;
+// }
+// s
 .search-inner-header-cotainer {
   position: absolute;
   box-shadow: 0 0 0 1px #0000000a, 0 8px 16px #00000026;
@@ -366,11 +321,11 @@
     display: flex;
     justify-content: space-between;
   }
-  .plus-animals{
+  .plus-animals {
     text-decoration: underline;
     cursor: pointer;
   }
-  .search-inner-header-cotainer-p{
+  .search-inner-header-cotainer-p {
     font-size: 14px;
     margin: 0;
   }
