--- a/src/assets/styles/cmps/InnerHeader.scss
+++ b/src/assets/styles/cmps/InnerHeader.scss
@@ -184,6 +184,7 @@
         &.big {
           display: flex;
           font-size: 16px;
+          color: white;
         }
       }
       .inner-header-dates-btn-search {
