--- a/src/assets/styles/cmps/CarouselFilterPreview.scss
+++ b/src/assets/styles/cmps/CarouselFilterPreview.scss
@@ -1,10 +1,18 @@
 .labels {
     position: sticky;
-    font-size: small;
+    font-size: 12px;
     margin-block: 1em;
 
+    button .carousel__icon {
+        font-family: Airbnb_Cereal-Bold;
+        border: solid 1px $clr9;
+        color: $clr7;
+        border-radius: 50%;
+        height: 27px;
+        width: 27px;
+    }
+
     .label {
-        opacity: 0.6;
         margin-block-start: 1em;
         align-items: center;
         min-width: 70px;
@@ -15,17 +23,20 @@
         &:hover {
             opacity: 1;
             color: $clr7;
-            box-shadow: inset 0 -2px #00000026 !important
+            box-shadow: inset 0 -2px #00000026 !important;
+            font-family: Airbnb_Cereal-Bold;
         }
 
         &.isActive {
             opacity: 1;
             color: $clr7;
-            box-shadow: inset 0 -2px #000 !important
+            box-shadow: inset 0 -2px #000 !important;
+            font-family: Airbnb_Cereal-Bold;
         }
     }
 
     img {
         width: 25px;
+        opacity: 0.6;
     }
 }
