--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -1,21 +1,13 @@
-.widerheader {
-  padding-bottom: 91px;
-  transition: 1s;
-  z-index: 10;
-}
-
 .main-header {
-  // &.is-in-details-page{
-
-  // }
   display: flex;
   height: 80px;
   align-items: center;
   justify-content: space-between;
   transition: 1s;
   // border-bottom: solid 1px #dddddd;
-  position: relative;
+  position:relative;
   z-index: 7;
+  background-color: #fff;
   .flex {
     align-items: center;
     // justify-content: space-between;
@@ -70,7 +62,7 @@
       height: 32px;
       margin-inline-start: 2%;
       cursor: pointer;
-      svg{
+      svg {
         margin: -5px;
       }
     }
@@ -131,7 +123,6 @@
       border-radius: 50%;
     }
   }
-
 }
 
 .inner-header-user {
@@ -153,19 +144,19 @@
   // }
 }
 
-.hr{
+.hr {
   grid-column: 1/-1;
   width: 99%;
-  opacity: .3;
+  opacity: 0.3;
   margin: 0;
 }
 
 .screen-shadow {
-    position: fixed;
-    top: 155px;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(113, 113, 113, 0.408);
-    z-index: 3;
+  position: fixed;
+  top: 155px;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(113, 113, 113, 0.408);
+  z-index: 3;
 }
