--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -1,6 +1,6 @@
 .app-footer {
     position: fixed;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     z-index: 2;
     border-top: 1px solid #dddddd;
