--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -53,8 +53,12 @@
     .guests {
       color: #717171;
       font-weight: normal;
+      font-size: 14.4px;
     }
-
+    .bold{
+      font-weight: bold;
+      color: black;
+    }
     .search-btn {
       background-color: $clr2;
       border-radius: 50%;
@@ -146,17 +150,17 @@
 
 .hr {
   grid-column: 1/-1;
-  width: 99%;
+  width: 100%;
   opacity: 0.3;
   margin: 0;
 }
 
 .screen-shadow {
-  position: fixed;
+  position: absolute;
   top: 155px;
   right: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(113, 113, 113, 0.408);
   z-index: 3;
 }
