--- a/src/assets/styles/cmps/AppHeaderDetails.scss
+++ b/src/assets/styles/cmps/AppHeaderDetails.scss
@@ -7,7 +7,7 @@
   border-radius: 50%;
   width: 32px;
   height: 32px;
-  margin-inline-start: 36%;
+  margin-inline-start: 34%;
   cursor: pointer;
   svg {
     margin: -5px;
@@ -20,14 +20,13 @@
   border-radius: 50px;
   border: solid 1px #dddddd;
   box-shadow: 0 1px 2px #00000014, 0 4px 12px #0000000d;
-  padding: 5px 10px;
+  padding: 5px 11px;
   align-items: center;
   margin-inline-start: 12.1%;
   .main-filter-btn-details {
       color: $clr7;
-      font-weight: bold;
-      font-family: CircularAir-Light;
+      font-family: Airbnb_Cereal-Medium;
       cursor: pointer;
-      font-size: 14.1px;
+      font-size: 14px;
     }
 }
