--- a/src/assets/styles/cmps/DetailsReviews.scss
+++ b/src/assets/styles/cmps/DetailsReviews.scss
@@ -4,7 +4,7 @@
   // grid-template-columns: repeat(2, 1fr);
   row-gap: 40px;
   padding: 0;
-
+  border-bottom: 1px solid grey;
   .review {
     // border: 1px solid palegreen;
     flex-direction: column;
