started working on the details calendar

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -27,10 +27,10 @@
 @import 'cmps/StayDetails';
 @import 'cmps/DetailsOrderBox';
 @import 'cmps/DetailsReviews';
+@import 'cmps/DetailsCalendar';
 
 // Reservation Page
 @import 'cmps/StayReservation';
 
-
 // explore
-@import 'cmps/StayExplore'
+@import 'cmps/StayExplore';
