--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -15,7 +15,8 @@ $mobile-big-breakpoint: 500px;
 $tablet-breakpoint: 960px;
 $narrow-breakpoint: 1200px;
 $normal-breakpoint: 1360px;
-$wide-breakpoint: 1800px;
+$wide-breakpoint: 1500px;
+$full-wide-breakpoint: 1750px;
 
 // Breakpoints details (stay)
 $mobile-details-breakpoint: 502px;
