--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -64,12 +64,25 @@
   grid-gap: 20px;
 
 
-  @include for-cards-big-layout {
+  // @include for-cards-big-layout {
+  //   grid-template-columns: repeat(auto-fill, minmax(0.8fr, 1fr));
+  //   gap: 0.6em;
+
+  //   .stay-card {
+  //     width: 291px;
+  //   }
+
+  //   .el-carousel__container {
+  //     height: 264px;
+  //   }
+  // }
+
+  @include for-tablet-layout {
     grid-template-columns: repeat(auto-fill, minmax(0.8fr, 1fr));
     gap: 0.6em;
 
     .stay-card {
-      width: 291px;
+      width: 100%;
     }
 
     .el-carousel__container {
@@ -77,26 +90,13 @@
     }
   }
 
-  @include for-cards-tablet-layout {
-    grid-template-columns: repeat(auto-fill, minmax(0.8fr, 1fr));
-    gap: 0.6em;
-
-    .stay-card {
-      width: 291px;
-    }
-
-    .el-carousel__container {
-      height: 264px;
-    }
-  }
-
-  @include for-cards-normal-layout {
+  @include for-narrow-layout {
     // grid-template-columns: repeat(5, minmax(100px, 270px));
     grid-template-columns: repeat(auto-fill, minmax(0.8fr, 1fr));
     gap: 0.6em;
 
     .stay-card {
-      width: 291px;
+      width: 100%;
     }
 
     .el-carousel__container {
@@ -104,13 +104,13 @@
     }
   }
 
-  @include for-cards-wide-layout {
-    // background-color: rgb(148, 131, 131);
+  @include for-wide-layout {
+    background-color: rgb(148, 131, 131);
     grid-template-columns: repeat(6, minmax(100px, 270px));
     gap: 2.5em;
 
     .stay-card {
-      width: 281px;
+      width: 100%;
     }
 
     .el-carousel__container {
