--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -34,9 +34,6 @@
 
 // explore
 @import 'cmps/StayExplore';
-<<<<<<< HEAD
-=======
 
 // userpages
-@import 'cmps/LoginSignUp'
->>>>>>> 2f67aaf0cc1299834d851168ee52ceb2beb6b203
+@import 'cmps/LoginSignUp';
