--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -110,7 +110,7 @@
   }
 
   @include for-wide-layout {
-    background-color: rgb(148, 131, 131);
+    // background-color: rgb(148, 131, 131);
     grid-template-columns: repeat(6, minmax(100px, 270px));
     gap: 2.5em;
 
