--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -36,4 +36,7 @@
 @import 'cmps/StayExplore';
 
 // userpages
-@import 'cmps/LoginSignUp'
+@import 'cmps/LoginSignUp';
+
+// stayEdit
+@import 'cmps/StayEdit.scss'
