--- a/src/assets/styles/cmps/DetailsReviews.scss
+++ b/src/assets/styles/cmps/DetailsReviews.scss
@@ -4,11 +4,11 @@
   // grid-template-columns: repeat(2, 1fr);
   row-gap: 40px;
   padding: 0;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid #dddddd;
   .review {
     // border: 1px solid palegreen;
     flex-direction: column;
-    gap: 0.5em;
+    gap: 0.35em;
   }
 
   .reviews-header {
@@ -31,13 +31,20 @@
     .rating {
       grid-template-columns: repeat(4, 1fr);
       align-items: center;
-      gap: 1em;
+      gap: 0.5em;
 
       p {
         margin: 0;
       }
+      .progress-bar {
+        align-items: center;
+        gap: 8px;
+        span {
+          font-size: 0.8em;
+        }
+      }
       progress {
-        height: 4px;
+        height: 3px;
         border-radius: 40px;
       }
       progress[value]::-webkit-progress-bar {
@@ -54,15 +61,26 @@
 
 .guest-reviews-container {
   display: grid;
-  margin-bottom: 4em;
+  gap: 0.5em;
   grid-template-columns: repeat(2, 1fr);
   .mini-user-details {
-    gap: 0.5em;
+    gap: 0.7em;
     img {
-      width: 40px;
-      height: 40px;
+      width: 41px;
+      height: 41px;
       border-radius: 50px;
       object-fit: cover;
     }
+    h4 {
+      margin: 0;
+    }
+  }
+  p {
+    font-family: Quicksand;
+    font-size: 0.89em;
+  }
+  span {
+    font-size: 0.8em;
+    font-family: Quicksand;
   }
 }
