--- a/src/assets/styles/cmps/StayDetails.scss
+++ b/src/assets/styles/cmps/StayDetails.scss
@@ -74,19 +74,6 @@
   .main-img {
     grid-area: main-img;
   }
-
-  // img-1 {
-  //   grid-area: img-1;
-  // }
-  // img-2 {
-  //   grid-area: img-2;
-  // }
-  // img-3 {
-  //   grid-area: img-3;
-  // }
-  // img-4 {
-  //   grid-area: img-4;
-  // }
 }
 
 .details-container {
@@ -199,6 +186,84 @@
   }
 }
 
+.map {
+  margin-block-start: 45px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.3);
+  // margin-block-end: 100px;
+  h3 {
+    margin-block-end: 25px;
+    font-family: CircularAir-Light;
+  }
+  .place-details-txt {
+    h3 {
+      margin: 0;
+    }
+    margin-block-start: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+  }
+}
+
+.host-info {
+  margin-block-start: 1.5em;
+  .left-side {
+    width: 65%;
+  }
+  .right-side {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    p {
+      margin: 0;
+    }
+    .protect {
+      gap: 0.3em;
+      img {
+        width: 30px;
+      }
+      p {
+        font-size: 0.7em;
+        font-family: Quicksand;
+      }
+    }
+  }
+  & .header {
+    margin-block-end: 0.7em;
+    margin-block-end: 0.7em;
+    display: flex;
+    align-items: center;
+    gap: 1em;
+    h3 {
+      margin: 0;
+    }
+    img {
+      width: 50px;
+      height: 50px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+  }
+  .info {
+    margin-block-end: 1em;
+    display: flex;
+    align-items: center;
+    gap: 1em;
+    img {
+      width: 15px;
+    }
+  }
+
+  .txt {
+    display: flex;
+    flex-direction: column;
+    gap: 0.7em;
+    h5 {
+      margin: 0;
+    }
+  }
+}
 ////////////////////////////////
 // @media (min-width: 550px) {
 //   .stay-details {
